-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 9.0.1
-
-
9429f710d (9.0)
-
QDS Berlin - 2023 Week 3/4
To reproduce, load attached file in Qt Creator and switch to design mode.
- is duplicated by
-
QTCREATORBUG-28717 QtCreator Crash after open Designer
-
- Closed
-
- relates to
-
QDS-2787 App quits when entering qutoation marks for ListElement
-
- Closed
-
- resulted in
-
QDS-8949 Add an automated test for ListElement in QML file
-
- Reported
-
| For Gerrit Dashboard: QTCREATORBUG-28672 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 456593,2 | QmlDesigner: Fix missing validation | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |