QmlDesigner: Fix missing validation

Fixes: QTCREATORBUG-28672
Change-Id: Ic8663d6c44cadbf3678ae564ec91572998d6d236
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>
(cherry picked from commit 571d822c7b5d270a3017ffddb6b779dcac488d60)
Reviewed-by: Robert Löhning <robert.loehning@qt.io>
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>